// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describeExports should describe multi-exports 1`] = `
Object {
  "exportsDefault": true,
  "hasExports": true,
  "moduleName": "spec/fixtures/MultipleComponents.js",
  "namedExportNames": Array [
    "Bold",
  ],
}
`;

exports[`describeExports should describe simple exports 1`] = `
Object {
  "exportsDefault": true,
  "hasExports": true,
  "moduleName": "spec/fixtures/esExports.js",
  "namedExportNames": Array [
    "refConst",
    "refFunc",
    "inlineConst",
    "inlineFunc",
  ],
}
`;
